# PirateGame

./: CMakeLists.txt  README.md
PirateGame/Include/Globals/: Clock.h  Context.h  Font.h  Globals.h  Input.h  JSONSave.h  JsonLoader.h  SoundHandler.h  TextureHandler.h  TextureResourceManager.h
PirateGame/Include/Lib/: json.hpp
PirateGame/Include/UI/Interactable/: Button.h  DropDown.h  Interactable.h  ScrollBar.h  Slider.h  TextDisplayBox.h
PirateGame/Include/UI/Menu/: InGameHUD.h  InventoryMenu.h  IslandMenu.h  Menu.h  OptionsMenu.h  StartMenu.h
PirateGame/Include/World/Architecture/: AstarAlgorithm.h  Chunk.h  GameState.h  Map.h  Minimap.h  QuadtreeTemplate.h  TextQueue.h  Textures.h
PirateGame/Include/World/Handlers/: ChunkHandler.h  CollisionManager.h  IdManager.h  LandMassHandler.h  MenuHandler.h  QuadtreeHandler.h  RegionHandler.h  WindHandler.h
PirateGame/Include/World/Objects/Landmass/: Island.h  Landmass.h  LandmassTypeGenerator.h  Rock.h  Shipwreck.h
PirateGame/Include/World/Objects/Ship/General/: Cannonball.h  EnemyShip.h  PlayerShip.h  Ship.h  ShipCannon.h  ShipEnums.h  ShipGroup.h  ShipSail.h
PirateGame/Include/World/Textures/: HUDTextures.h  InteractableTextures.h  InventoryTextures.h  LandMassTextures.h  MarketTextures.h  OptionsMenuTextures.h  ShipTextures.h
PirateGame/Include/World/World/: WaterTiler.h  World.h
PirateGame/Resources/JSON/: saveFile.json
PirateGame/Source/: main.cpp
PirateGame/Source/Globals/: GlobalSoundManager.cpp  Globals.cpp  Input.cpp
PirateGame/Source/UI/Interactable/: Button.cpp  DropDown.cpp  Interactable.cpp  ScrollBar.cpp  Slider.cpp  TextDisplayBox.cpp
PirateGame/Source/UI/Menu/: InGameHUD.cpp  InventoryMenu.cpp  IslandMenu.cpp  Menu.cpp  OptionsMenu.cpp  StartMenu.cpp
PirateGame/Source/World/Architecture/: AstarAlgorithm.cpp  Map.cpp  Minimap.cpp  View.cpp
PirateGame/Source/World/Handlers/: ChunkHandler.cpp  CollisionManager.cpp  LandMassHandler.cpp  MenuHandler.cpp
PirateGame/Source/World/Objects/Landmass/: Island.cpp  Landmass.cpp  Rock.cpp  Shipwreck.cpp
PirateGame/Source/World/World/: World.cpp
(+28 files in other folders)
